@@ -55,6 +55,10 @@ IW_EXPORT char *iwpool_printf(IWPOOL *pool, const char *format, ...);
 IW_EXPORT char **iwpool_split_string(IWPOOL *pool, const char *haystack,
                                      const char *split_chars, bool ignore_whitespace);
 
+IW_EXPORT char **iwpool_printf_split(IWPOOL *pool,
+                                     const char *split_chars, bool ignore_whitespace,
+                                     const char *format, ...);
+
 IW_EXPORT void iwpool_destroy(IWPOOL *pool);
 
 IW_EXPORT size_t iwpool_allocated_size(IWPOOL *pool);
